--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
-
 }
